--- a/styles/splitter-layout.less
+++ b/styles/splitter-layout.less
@@ -18,15 +18,15 @@
         width: 4px;
         height: 100%;
         cursor: col-resize;
-        background-color: #e6e6e6;
+        background-color: #7ea0bf;
         &:hover {
-            background-color: #bae7ff;
+            background-color: #06acb3;
         }
     }
     &.layout-changing {
         cursor: col-resize;
         & > .layout-splitter {
-            background-color: #bae7ff;
+            background-color: #06acb3;
         }
     }
     &.splitter-layout-vertical {
