--- a/styles/theme.less
+++ b/styles/theme.less
@@ -1,4 +1,5 @@
 @primary-color: #3d4c5a;
-@link-color: #06acb3;
+@link-color: #3d4c5a;
 @border-radius-base: 2px;
 @font-size-base: 12px;
+@table-row-hover-bg: #06acb3;
