增加默认路由

--- a/styles/default.less
+++ b/styles/default.less
@@ -3,8 +3,15 @@
 	margin: 0 !important;
 }
 
+.ant-table-tbody {
+	tr {
+		transition: none !important;
+	}
+}
+
 .az-report-row {
 	&:hover {
 		color: #fff;
+		transition: none;
 	}
 }
