树结点文字可通过HTML更新颜色

--- a/styles/default.less
+++ b/styles/default.less
@@ -6,6 +6,7 @@
 .ant-table-tbody {
 	tr {
 		transition: none !important;
+		color: #222;
 	}
 }
 
@@ -13,5 +14,12 @@
 	&:hover {
 		color: #fff;
 		transition: none;
+	}
+}
+
+.ztree {
+	em {
+		color: #f00;
+		font-style: normal;
 	}
 }
