--- a/styles/splitter-layout.less
+++ b/styles/splitter-layout.less
@@ -1,43 +1,44 @@
 .splitter-layout {
-    position: absolute;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    .layout-pane {
-        position: relative;
-        flex: 0 0 auto;
-        overflow: auto;
-        &.layout-pane-primary {
-            flex: 1 1 auto;
-        }
-    }
-    & > .layout-splitter {
-        flex: 0 0 auto;
-        width: 4px;
-        height: 100%;
-        cursor: col-resize;
-        background-color: #7ea0bf;
-        &:hover {
-            background-color: #06acb3;
-        }
-    }
-    &.layout-changing {
-        cursor: col-resize;
-        & > .layout-splitter {
-            background-color: #06acb3;
-        }
-    }
-    &.splitter-layout-vertical {
-        flex-direction: column;
-        &.layout-changing {
-            cursor: row-resize;
-        }
-        & > .layout-splitter {
-            width: 100%;
-            height: 4px;
-            cursor: row-resize;
-        }
-    }
+	position: absolute;
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	.layout-pane {
+		position: relative;
+		flex: 0 0 auto;
+		overflow: auto;
+		&.layout-pane-primary {
+			background-color: #3d4c5a;
+			flex: 1 1 auto;
+		}
+	}
+	& > .layout-splitter {
+		flex: 0 0 auto;
+		width: 4px;
+		height: 100%;
+		cursor: col-resize;
+		background-color: #7ea0bf;
+		&:hover {
+			background-color: #06acb3;
+		}
+	}
+	&.layout-changing {
+		cursor: col-resize;
+		& > .layout-splitter {
+			background-color: #06acb3;
+		}
+	}
+	&.splitter-layout-vertical {
+		flex-direction: column;
+		&.layout-changing {
+			cursor: row-resize;
+		}
+		& > .layout-splitter {
+			width: 100%;
+			height: 4px;
+			cursor: row-resize;
+		}
+	}
 }
