增加b标签i标签2种强调色

--- a/styles/default.less
+++ b/styles/default.less
@@ -25,5 +25,16 @@
 	em {
 		color: #ff0033;
 		font-style: normal;
+		font-weight: normal;
+	}
+	b {
+		color: #00ffff;
+		font-style: normal;
+		font-weight: normal;
+	}
+	i {
+		color: #ffcc00;
+		font-style: normal;
+		font-weight: normal;
 	}
 }
