文本列加Popover浮层显示

--- a/styles/default.less
+++ b/styles/default.less
@@ -1,3 +1,22 @@
+::-webkit-scrollbar {
+    width : 8px;
+    height: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius     : 8px;
+    -webkit-box-shadow: none;
+    background        : #cccccc;
+    -webkit-box-shadow: none;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: none;
+    border-radius     : 8px;
+    background        : #eee;
+    -webkit-box-shadow: none;
+}
+
 //覆盖原样式
 .ant-table-body {
 	margin: 0 !important;
