--- a/styles/default.less
+++ b/styles/default.less
@@ -4,7 +4,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius     : 8px;
+    border-radius     : 0;
     -webkit-box-shadow: none;
     background        : #cccccc;
     -webkit-box-shadow: none;
@@ -12,7 +12,7 @@
 
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: none;
-    border-radius     : 8px;
+    border-radius     : 0;
     background        : #eee;
     -webkit-box-shadow: none;
 }
