依照孟总修改样式

--- a/styles/default.less
+++ b/styles/default.less
@@ -42,17 +42,17 @@
 
 .ztree {
 	em {
-		color: #ff0033;
+		color: #d6000b;
 		font-style: normal;
 		font-weight: normal;
 	}
 	b {
-		color: #00ffff;
+		color: #00abd2;
 		font-style: normal;
 		font-weight: normal;
 	}
 	i {
-		color: #ffcc00;
+		color: #f1a612;
 		font-style: normal;
 		font-weight: normal;
 	}
