--- a/styles/splitter-layout.less
+++ b/styles/splitter-layout.less
@@ -10,7 +10,7 @@
 		flex: 0 0 auto;
 		overflow: auto;
 		&.layout-pane-primary {
-			background-color: #3d4c5a;
+			background-color: #ebedee;
 			flex: 1 1 auto;
 		}
 	}
