--- a/styles/splitter-layout.less
+++ b/styles/splitter-layout.less
@@ -19,7 +19,7 @@
 		width: 4px;
 		height: 100%;
 		cursor: col-resize;
-		background-color: #7ea0bf;
+		background-color: #3d4c5a;
 		&:hover {
 			background-color: #06acb3;
 		}
