聊天记录页面上下加分页

--- a/styles/default.less
+++ b/styles/default.less
@@ -6,7 +6,7 @@
 ::-webkit-scrollbar-thumb {
     border-radius     : 0;
     -webkit-box-shadow: none;
-    background        : #cccccc;
+    background        : #3d4c5a;
     -webkit-box-shadow: none;
 }
 
