--- a/styles/default.less
+++ b/styles/default.less
@@ -1,20 +1,20 @@
 ::-webkit-scrollbar {
-    width : 8px;
-    height: 8px;
+	width: 8px;
+	height: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius     : 0;
-    -webkit-box-shadow: none;
-    background        : #3d4c5a;
-    -webkit-box-shadow: none;
+	border-radius: 0;
+	-webkit-box-shadow: none;
+	background: #676c71;
+	-webkit-box-shadow: none;
 }
 
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: none;
-    border-radius     : 0;
-    background        : #eee;
-    -webkit-box-shadow: none;
+	-webkit-box-shadow: none;
+	border-radius: 0;
+	background: #eee;
+	-webkit-box-shadow: none;
 }
 
 //覆盖原样式
@@ -34,6 +34,9 @@
 		color: #fff;
 		transition: none;
 		a,
+		b,
+		i,
+		em,
 		span {
 			color: #fff;
 		}
