修改默认名称

--- a/template/default.html
+++ b/template/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>案件分析报告</title>
+        <title>分析报告</title>
         <link rel="stylesheet" href="assert/jquery/css/zTreeStyle/zTreeStyle.css" />
         <script src="assert/polyfill/polyfill.min.js"></script>
         <script src="assert/jquery/jquery.1.12.4.min.js"></script>
